syntax = "proto3";

package v1.aspbv1;

import "v1/aspb/msg_anime_serie.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/aspb;aspbv1";

message UpdateAnimeSerieRequest {
  int64           animeID           = 1;
  optional string originalTitle     = 2;
  optional int32  firstYear         = 3;
  optional int32  lastYear          = 4;
  optional int32  malID             = 5;
  optional int32  tvdbID            = 6;
  optional int32  tmdbID            = 7;
  optional string portraitPoster    = 8;
  optional string portraitBlurHash  = 9;
  optional string landscapePoster   = 10;
  optional string landscapeBlurHash = 11;
}

message UpdateAnimeSerieResponse {
  AnimeSerieResponse animeSerie = 1;
}